[package]
name = "service"
version = "0.0.1"
authors = ["bosilan"]

[dependencies]
rustc-serialize = "0.3.16"
time = "0.1"
regex = "0.1"
log = "0.3.5"

lazy_static = { git = "https://github.com/rust-lang-nursery/lazy-static.rs.git" }
easydb = {version="0.0.1", path="../../../easydb"}
easy_util = {version="0.0.1", path="../../../easy_util"}
dc = {version="0.0.1", path="../dc"}
elog = {version="0.0.1", path="../elog"}
util = {version="0.0.1", path="../util"}
cons = {version="0.0.1", path="../cons"}

