[package]
name = "web"
version = "0.0.1"
authors = ["bosilan"]

[dependencies]
rustc-serialize = "0.3.16"
time = "0.1"
regex = "0.1"
hyper = "0.7.0"
url = "0.5.5"
filetime = "0.1"
chrono = "0.2.20"
log = "0.3.5"

lazy_static = { git = "https://github.com/rust-lang-nursery/lazy-static.rs.git" }
easydb = {version="0.0.1", path="../../../easydb"}
easy_util = {version="0.0.1", path="../../../easy_util"}
easy_config = {version="0.0.1", path="../../../easy_config"}
elog = {version="0.0.1", path="../elog"}
dc = {version="0.0.1", path="../dc"}
util = {version="0.0.1", path="../util"}
cons = {version="0.0.1", path="../cons"}
service = {version="0.0.1", path="../service"}
